@@ -1,5 +1,4 @@
 package Game.Engine;
-import Game.GUI.MapPanel;
 import Game.Items.Interactable;
 import Game.Characters.*;
 import Game.Combat.CombatSystem;
@@ -17,7 +16,6 @@ import java.util.concurrent.atomic.AtomicBoolean;
  * GameWorld is the central controller of the turn-based RPG game.
  * It initializes the game map, generates all entities (player, enemies, and items),
  * handles user input, movement, combat, item interaction, and the main game loop.
- *
  * This class manages:
  * - Initial setup of the world and user input
  * - Populating the grid with enemies and items
@@ -26,6 +24,10 @@ import java.util.concurrent.atomic.AtomicBoolean;
  * - Visibility logic for entities based on player's position
  */
 public class GameWorld {
+    private static final int ENEMY_SPAWN_CHANCE=30;
+    private static final int WALL_SPAWN_CHANCE=40;
+    private static final int POTION_SPAWN_CHANCE=60;
+    private static final int POWER_POTION_CHANCE=25;
     /**
      * Constructs the game world by:
      * - Collecting input from the user for map size and character choice
@@ -62,7 +64,7 @@ public class GameWorld {
                 int probability = random.nextInt(100);
                 GameEntity entity = null;
 
-                if (probability < 30) {
+                if (probability < ENEMY_SPAWN_CHANCE) {
                     int enemyType = random.nextInt(3);
                     entity = switch (enemyType) {
                         case 0 -> new Goblin(i, j);
@@ -73,12 +75,12 @@ public class GameWorld {
                     enemy.init(this,isRunning);
                     enemies.add((Enemy) entity);
                 }
-                else if (probability < 40) {
+                else if (probability < WALL_SPAWN_CHANCE) {
                     entity = new Wall(i, j);
                 }
-                else if (probability < 60) {
+                else if (probability < POTION_SPAWN_CHANCE) {
                     int chance = random.nextInt(100);
-                    if (chance < 25) {
+                    if (chance < POWER_POTION_CHANCE) {
                         entity=new PowerPotion(i,j);
                         items.add((GameItem) entity);
                     }
@@ -87,18 +89,18 @@ public class GameWorld {
                         items.add((GameItem) entity);
                     }
                 }
-
                 if (entity != null) {
                     gameMap.placeEntity(newPos, entity);
                 }
             }
         }
         LogManager.startLogger();
-        LogManager.addLog("Start");
-        this.scheduler = Executors.newScheduledThreadPool(10);
-        scheduleAllEnemies();
+        LogManager.addLog("==============Game Started==============");
+        LogManager.addLog("Player is :" + getPlayer().getName() + " type: "+getPlayer().getClass().getSimpleName());
         updateVisibility(playerPosition);
         notifyListeners();
+        this.scheduler = Executors.newScheduledThreadPool(10);
+        scheduleAllEnemies();
     }
     /**
      * Picks a random empty cell from the map for placing entities (like player).
@@ -126,13 +128,7 @@ public class GameWorld {
      */
     private void ManageFight(PlayerCharacter player, Enemy enemy) {
         combatSystem.resolveCombat(player,enemy);
-        if (enemy.isDead()){
-            Treasure treasure=enemy.Defeat();
-            this.addItem(treasure);
-            LogManager.addLog("Treasure was created at: "+treasure.getPosition());
-            gameMap.placeEntity(enemy.getPosition(),treasure);
-            gameMap.removeEntity(enemy.getPosition(),enemy);
-        }
+        placeTreasure(enemy);
     }
     /**
      * Returns the first (and currently only) player in the world.
@@ -140,7 +136,7 @@ public class GameWorld {
      * @return the main player character
      */
     public PlayerCharacter getPlayer(){
-        return players.get(0);
+        return players.getFirst();
     }
     /**
      * Adds a game item to the world's item list.
@@ -169,6 +165,22 @@ public class GameWorld {
             }
         }
     }
+    private void placeTreasure(Enemy enemy){
+        gameMap.tryLockCell(enemy.getPosition(),50);
+        try{
+            if (enemy.isDead()) {
+                Treasure treasure = enemy.Defeat();
+                this.addItem(treasure);
+                LogManager.addLog("Treasure was created at: " + treasure.getPosition());
+                gameMap.placeEntity(enemy.getPosition(), treasure);
+                gameMap.removeEntity(enemy.getPosition(), enemy);
+            }
+        }
+        finally {
+            gameMap.unlockCell(enemy.getPosition());
+            notifyMapChange();
+        }
+    }
     public GameMap getGameMap() {
         return gameMap;
     }
@@ -180,11 +192,12 @@ public class GameWorld {
     }
     public void movePlayerTo(Position dest){
         PlayerCharacter p = players.get(0);
+        Position src=getPlayer().getPosition();
+
         if (!gameMap.isBlocked(dest)){
             try{
-                if (gameMap.tryLockCell(dest,50)){
+                if (gameMap.tryLockCell(dest,50) && gameMap.tryLockCell(src,50)){
                     if (gameMap.getGrid().get(dest).isEmpty() && !gameMap.isBlocked(dest)){
-                        Position src = p.getPosition();
                         gameMap.removeEntity(src,p);
                         p.setPosition(dest);
                         gameMap.placeEntity(dest,p);
@@ -196,42 +209,64 @@ public class GameWorld {
             }
             finally {
                 gameMap.unlockCell(dest);
+                gameMap.unlockCell(src);
             }
         }
     }
     public void attackEnemyAt(Position pos) {
-        List<GameEntity> list = gameMap.getGrid().get(pos);
-        if (list != null && !list.isEmpty() && list.get(0) instanceof Enemy e) {
-            ManageFight(getPlayer(),e);
-            updateVisibility(getPlayer().getPosition());
-            notifyListeners();
+        if (gameMap.tryLockCell(pos, 50)) {
+            try {
+                List<GameEntity> list = gameMap.getGrid().get(pos);
+                if (list != null && !list.isEmpty() && list.get(0) instanceof Enemy e) {
+                    ManageFight(getPlayer(),e);
+                    updateVisibility(getPlayer().getPosition());
+                }
+            }
+            finally {
+                gameMap.unlockCell(pos);
+                notifyListeners();
+            }
         }
     }
     public void pickupItemAt(Position pos) {
-        List<GameEntity> list = gameMap.getGrid().get(pos);
-        if (list != null && !list.isEmpty() && list.get(0) instanceof Pickupable pick) {
-            pick.pickup(getPlayer());
-            list.remove(0);
-            updateVisibility(getPlayer().getPosition());
-            notifyListeners();
-            LogManager.addLog("Player picked up an item at: "+pos);
+        if (gameMap.tryLockCell(pos, 50)) {
+            try {
+                List<GameEntity> list = gameMap.getGrid().get(pos);
+                if (list != null && !list.isEmpty() && list.get(0) instanceof Pickupable pick) {
+                    pick.pickup(getPlayer());
+                    list.remove(0);
+                    updateVisibility(getPlayer().getPosition());
+                    LogManager.addLog("Player picked up an item at: " + pos);
+                }
+            }
+            finally {
+                gameMap.unlockCell(pos);
+                notifyListeners();
+            }
         }
+
     }
     public void interactWithItemAt(Position pos) {
-        List<GameEntity> cell = gameMap.getGrid().get(pos);
-        if (cell == null)
-            return;
+        if (gameMap.tryLockCell(pos, 100)) {
+            try {
+                List<GameEntity> cell = gameMap.getGrid().get(pos);
+                if (cell == null)
+                    return;
+                Iterator<GameEntity> it = cell.iterator();
+                while (it.hasNext()) {
+                    GameEntity ent = it.next();
+                    if (ent instanceof Interactable inter) {
+                        inter.interact(getPlayer());
+                        LogManager.addLog("Player interacted with a treasure at: " + pos);
+                        it.remove();
+                        updateVisibility(getPlayer().getPosition());
 
-        Iterator<GameEntity> it = cell.iterator();
-        while (it.hasNext()) {
-            GameEntity ent = it.next();
-            if (ent instanceof Interactable inter) {
-                inter.interact(getPlayer());
-                LogManager.addLog("Player interacted with a treasure at: "+pos );
-                it.remove();
-                updateVisibility(getPlayer().getPosition());
+                        return;
+                    }
+                }
+            } finally {
+                gameMap.unlockCell(pos);
                 notifyListeners();
-                return;
             }
         }
     }
@@ -265,12 +300,10 @@ public class GameWorld {
     }
     private void notifyMapChange(){
         for (GameListener l:listeners){
-            if (listeners instanceof MapPanel mapPanel){
-                mapPanel.changeDetected();
-            }
+            l.onMapChange();
         }
     }
-    private Position getStepPosition(Position enemyPos){
+    private List<Position> getStepPositionNearPlayer(Position enemyPos){
         int r=enemyPos.getRow();
         int c=enemyPos.getCol();
         ArrayList<Position>positionAvailable=new ArrayList<>(4);
@@ -289,33 +322,88 @@ public class GameWorld {
         if (positionAvailable.isEmpty()){
             return null;
         }
-        return positionAvailable.get(random.nextInt(positionAvailable.size()));
+        return positionAvailable;
     }
-    public void attemptToMove(Enemy enemy){
-        if (enemy.isDead()){
+    public void attemptToMove(Enemy enemy) {
+        if (enemy.isDead()) {
             return;
         }
-        Position enemyPos=enemy.getPosition();
-        Position targetPos=getStepPosition(enemyPos);
-        try {
-            if (gameMap.tryLockCell(targetPos, 50)) ;
-            try {
-                if (gameMap.getGrid().get(targetPos).isEmpty() && !gameMap.isBlocked(targetPos)) {
-                    moveEntity(enemy,targetPos);
-                    if (enemy.getVisibility()){
-                        notifyMapChange();
-                        updateVisibility(getPlayer().getPosition());
+        Position enemyPos = enemy.getPosition();
+        Position playerPos = getPlayer().getPosition();
+        double distToPlayer = enemyPos.distanceTo(playerPos);
+
+        if (distToPlayer <= 2) {
+            for (Position nextStep:getStepPositionNearPlayer(playerPos)){
+                if (nextStep.equals(enemyPos)) {
+                    continue;
+                }
+                if (tryMoveto(enemyPos, nextStep)) {
+                    if (gameMap.tryLockCell(enemyPos, 50)) {
+                        try {
+                            if (gameMap.tryLockCell(nextStep,50)){
+                                try {
+                                    moveEntity(enemy, nextStep);
+                                    updateVisibility(playerPos);
+                                    notifyMapChange();
+                                }
+                                finally {
+                                    gameMap.unlockCell(nextStep);
+                                }
+                            }
+                        }
+                        finally {
+                            gameMap.unlockCell(enemyPos);
+                        }
                     }
+                    return;
                 }
             }
-            finally {
-                gameMap.unlockCell(targetPos);
+        }
+        else {
+            List<Position> neighbors = getPositionsShuffled(enemyPos);
+            for (Position target : neighbors){
+                if (!gameMap.isBlocked(target) && gameMap.tryLockCell(enemyPos, 50)){
+                    try{
+                        if (gameMap.tryLockCell(target,50)){
+                            try {
+                                moveEntity(enemy, target);
+                                if (enemy.getVisibility()) {
+                                    notifyMapChange();
+                                    updateVisibility(playerPos);
+                                }
+                            }
+                            finally {
+                                gameMap.unlockCell(target);
+                            }
+                        }
+                    }
+                    finally{
+                        gameMap.unlockCell(enemyPos);
+                    }
+                    return;
+                }
             }
         }
-        finally {
-            notifyMapChange();}
+        notifyMapChange();
+    }
+    private List<Position> getPositionsShuffled(Position enemyPos) {
+        List<Position> neighboringPos = new ArrayList<>();
+        neighboringPos.add(new Position(enemyPos.getRow()+ 1,enemyPos.getCol()));
+        neighboringPos.add(new Position(enemyPos.getRow()- 1,enemyPos.getCol()));
+        neighboringPos.add(new Position(enemyPos.getRow(),enemyPos.getCol()+1));
+        neighboringPos.add(new Position(enemyPos.getRow(),enemyPos.getCol()-1));
+        Collections.shuffle(neighboringPos);
+        return neighboringPos;
+    }
+    private boolean tryMoveto(Position src,Position dest){
+        if (src.distanceTo(dest)==1 && !gameMap.isBlocked(dest) && gameMap.getGrid().get(dest).isEmpty()){
+            return true;
+        }
+        else
+            return false;
     }
     private void moveEntity(GameEntity entity,Position newPos){
+        //no need to lock,place entity and remove entity methods lock
         Position oldPos=entity.getPosition();
         gameMap.removeEntity(oldPos,entity);
         entity.setPosition(newPos);
@@ -329,7 +417,7 @@ public class GameWorld {
             },100,TimeUnit.MILLISECONDS);
     }
     private void scheduleAllEnemies(){
-        for (Enemy enemy : enemies) {
+        for (Enemy enemy : enemies){
             scheduleOneEnemy(enemy);
         }
     }
@@ -338,14 +426,16 @@ public class GameWorld {
         scheduler.shutdownNow();
     }
 
-    private ScheduledExecutorService scheduler;
+    private final ScheduledExecutorService scheduler;
     private final AtomicBoolean isRunning = new AtomicBoolean(true);
     private Random random;
-    private int rows,cols;
+    private final int rows;
+    private final int cols;
     private List<PlayerCharacter> players;
     private List<Enemy> enemies;
     private List<GameItem> items;
-    private GameMap gameMap;
-    private CombatSystem combatSystem;
+    private final GameMap gameMap;
+    private final CombatSystem combatSystem;
     private final List<GameListener> listeners = new ArrayList<>();
+
 }
